--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.10.0",
     "@vercel/postgres": "^0.10.0",
+    "cors": "^2.8.5",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
     "react": "^19.0.0",
